--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -12,7 +12,7 @@ jobs:
       - name: load_repository
         uses: actions/checkout@v4
       - name: Build
-        run: cd banking && && cmake -H. -B build && cmake --build build
+        run: cd banking && cmake -H. -B build && cmake --build build
 
       # - name: Test
       #   working-directory: ${{github.workspace}}/build
