--- a/banking/CMakeLists.txt
+++ b/banking/CMakeLists.txt
@@ -5,14 +5,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(banking)
 
-add_library(Account STATIC Account.cpp)
-add_library(Transaction STATIC Transaction.cpp)
+add_library(banking STATIC Account.cpp Transaction.cpp)
+
+include_directories(
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+        )
 
 if(BUILD_TESTS)
   enable_testing()
-  add_subdirectory(../third-party/gtest)
-  file(GLOB \${PROJECT_NAME}_TEST_SOURCES ../tests/*.cpp)
-  add_executable(check \${\${PROJECT_NAME}_TEST_SOURCES})
-  target_link_libraries(check \${PROJECT_NAME} gtest_main)
+  add_subdirectory(third-party/gtest)
+  file(GLOB ${PROJECT_NAME}_TEST_SOURCES tests/*.cpp)
+  add_executable(check tests/test1.cpp)
+  target_link_libraries(check gtest_main)
   add_test(NAME check COMMAND check)
 endif()
