--- a/banking/CMakeLists.txt
+++ b/banking/CMakeLists.txt
@@ -16,6 +16,6 @@ if(BUILD_TESTS)
   add_subdirectory(third-party/gtest)
   file(GLOB ${PROJECT_NAME}_TEST_SOURCES tests/*.cpp)
   add_executable(check tests/test1.cpp)
-  target_link_libraries(check {gtest_main @ 33af80a})
+  target_link_libraries(check gtest_main)
   add_test(NAME check COMMAND check)
 endif()
