--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
       - name: load_repository
         uses: actions/checkout@v4
+      - run git submodule add https://github.com/google/googletest third-party/gtest 
       - name: Build
         run: cd banking && cmake -H. -B build && cmake --build build
 
       - name: Test
-        run: cd banking && git submodule add https://github.com/google/googletest third-party/gtest && cmake -H. -B build -DBUILD_TESTS=ON && cmake --build build --target test
+        run: cmake --build build --target test
 
